--- a/schema-validator/tsconfig-build.json
+++ b/schema-validator/tsconfig-build.json
@@ -1,4 +1,17 @@
-{
-     "extends": "./tsconfig.json",
-     "exclude": ["tests"]
+{    
+    "compilerOptions": {
+        "emitDeclarationOnly": true,
+        "declarationDir": "./lib/types",
+        "module": "commonjs",
+        "target": "es2019", 
+        "declaration": true,                             
+        "declarationMap": true,                           
+        "baseUrl": ".",
+        "rootDirs": ["src"],
+        "paths": {
+            "@/*": [ "./src/*" ],
+        }
+    },
+    "include": ["src",],
+    "exclude": ["node_modules, tests"]
 }
