--- a/schema-validator/package.json
+++ b/schema-validator/package.json
@@ -3,22 +3,33 @@
   "version": "1.0.0",
   "description": "",
   "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "types": "lib/types/index.d.ts",
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "rm -rf lib && mkdir lib && tsc -p tsconfig-build.json",
-    "build:watch": "npm run build -- --watch",
+    "build:babel": "babel src --extensions \".js,.ts\" --out-dir lib --copy-files --no-copy-ignored",
+    "build:type": "tsc -p tsconfig-build.json",
+    "build": "npm run build:type && npm run build:babel",
     "test": "jest --passWithNoTests --runInBand --no-cache",
     "test:unit": "npm test -- --watch --silent"
   },
   "keywords": [],
   "author": "",
   "devDependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.5",
+    "@babel/node": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/preset-typescript": "^7.16.5",
     "@types/jest": "^27.0.3",
+    "@types/node": "^17.0.2",
     "@types/uuid": "^8.3.3",
+    "babel-plugin-module-resolver": "^4.1.0",
     "jest": "^27.4.5",
     "ts-jest": "^27.1.2",
+    "ts-node-dev": "^1.1.8",
+    "tsc-alias": "^1.5.0",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.4",
     "uuid": "^8.3.2"
   },
