--- a/example/package.json
+++ b/example/package.json
@@ -18,16 +18,17 @@
     "@babel/preset-typescript": "^7.16.5",
     "@types/jest": "^27.0.3",
     "@types/node": "^17.0.2",
+    "@types/uuid": "^8.3.3",
     "babel-plugin-module-resolver": "^4.1.0",
+    "core-js": "^3.20.1",
     "cross-env": "^7.0.3",
+    "email-validator": "^2.0.4",
     "jest": "^27.4.5",
     "nodemon": "^2.0.15",
     "ts-jest": "^27.1.2",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
-    "typescript": "^4.5.4"
-  },
-  "dependencies": {
-    "core-js": "^3.20.0"
+    "typescript": "^4.5.4",
+    "uuid": "^8.3.2"
   }
 }
