--- a/schema-validator/package.json
+++ b/schema-validator/package.json
@@ -25,12 +25,17 @@
     "@types/node": "^17.0.2",
     "@types/uuid": "^8.3.3",
     "babel-plugin-module-resolver": "^4.1.0",
+    "email-validator": "^2.0.4",
     "jest": "^27.4.5",
     "ts-jest": "^27.1.2",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.4",
     "uuid": "^8.3.2"
+  },
+  "peerDependencies": {
+    "uuid": "^8.3.2",
+    "email-validator": "^2.0.4"
   },
   "files": [
     "/lib"
