--- a/schema-validator/package.json
+++ b/schema-validator/package.json
@@ -1,15 +1,14 @@
 {
   "name": "fck-schema-validator",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "lib/index.js",
-  "types": "lib/types/index.d.ts",
   "license": "MIT",
   "private": false,
   "scripts": {
     "build:babel": "babel src --extensions \".js,.ts\" --out-dir lib --copy-files --no-copy-ignored",
-    "build:type": "tsc -p tsconfig-build.json",
-    "build": "npm run build:type && npm run build:babel",
+    "build:tsc": "tsc -p tsconfig-build.json",
+    "build": "npm run build:tsc && npm run build:babel",
     "test": "jest --passWithNoTests --runInBand --no-cache",
     "test:unit": "npm test -- --watch --silent"
   },
