--- a/integration-example/package.json
+++ b/integration-example/package.json
@@ -30,5 +30,8 @@
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.4",
     "uuid": "^8.3.2"
+  },
+  "dependencies": {
+    "fck-schema-validator": "^1.1.0"
   }
 }
