--- a/schema-validator/tsconfig.json
+++ b/schema-validator/tsconfig.json
@@ -12,8 +12,8 @@
         "strict": true,                                  
         "skipLibCheck": true,   
         "baseUrl": ".",
-        "rootDirs": ["src"]                       
+        "rootDirs": ["src", "tests"]                       
     },
-    "include": ["src" ],
-    "exclude": ["node_modules", "tests"],
+    "include": ["src" , "tests"],
+    "exclude": ["node_modules"],
 }
