--- a/schema-validator/package.json
+++ b/schema-validator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fck-schema-validator",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/types/index.d.ts",
@@ -22,6 +22,7 @@
     "@types/node": "^17.0.2",
     "@types/uuid": "^8.3.3",
     "babel-plugin-module-resolver": "^4.1.0",
+    "cpf-cnpj-validator": "^1.0.3",
     "email-validator": "^2.0.4",
     "jest": "^27.4.5",
     "ts-jest": "^27.1.2",
@@ -32,7 +33,8 @@
   },
   "peerDependencies": {
     "email-validator": "^2.0.4",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "cpf-cnpj-validator": "^1.0.3"
   },
   "files": [
     "/lib"
