--- a/schema-validator/tsconfig.json
+++ b/schema-validator/tsconfig.json
@@ -12,7 +12,7 @@
         "strict": true,                                  
         "skipLibCheck": true,   
         "baseUrl": ".",
-        "rootDirs": ["src", "tests"]                       
+        "rootDirs": ["src"]                       
     },
     "include": ["src" , "tests"],
     "exclude": ["node_modules"],
